ajout de .gitignore et de quelques rigoleries.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
@@ -9,22 +10,27 @@
     <link rel="icon" href="./img/favicon.png" />
     <title>Maitrise HTML/CSS</title>
 </head>
+
 <body>
     <h1>De nouvelles bases</h1>
-    <h2><strong>
+    <h2><em>
 
-        Ca commence ici...
-    </strong>
+            Ça commence ici...
+        </em>
 
     </h2>
-    <hr>
     <div>
+        <a href="#contact">voir les coordonnées de l'auteur</a>
+
+    </div>
+    <hr>
+    <!-- <div>
         <h4>Je code en:</h4>
         <ul>
             <li>HTML 5</li>
             <li>CSS 3</li>
             <li>JavaScript</li>
-    
+
         </ul>
     </div>
     <hr>
@@ -58,7 +64,7 @@
             </dd>
 
             <dt>Musique</dt>
-            <dd>Notamment 
+            <dd>Notamment
                 <ul>
                     <li>Rock</li>
                     <li>Electro</li>
@@ -69,9 +75,44 @@
             <dt>Apprendre</dt>
             <dd>Je veux toujours en savoir plus...</dd>
         </dl>
+    </div> -->
+    <div id="contact">
+
+        <h4>en savoir plus: </h4>
+        <a href="https://fabric-io.netlify.app" title="mon site portfolio" target="_blank">Allez donc voir par là...</a>
+        <div>Une réaction? Faites-m'en part <a href="mailto:fabezio@outlook.fr" target="_blank">ici</a>.</div>
+        <div>Vous pouvez également me contacter par <a href="tel:+33652812946" target="_blank">téléphone</a>.</div>
     </div>
-    <h4>en savoir plus: </h4>
-    <a href="https://fabric-io.netlify.app" title="mon site portfolio" target="_blank" >Allez donc voir par là...</a>
+    <h4>Et pour le reste?</h4>
+    <div>Le petit chaperon <span class="red">rouge</span> va voir mêre-grand. <br>Elle passe par un bois très <mark
+            class="dark">sombre</mark>. <span class="ice">Brrrr</span>. </div>
+    <div>
+        Je viens de regarder <cite lang="en">Terminator</cite> de <cite lang="en">Jim Cameron</cite>. <q>Je reviendrai!
+        </q>
+    </div>
+    <div>Petite citation: <blockquote>Nul ne peut te faire te sentir inférieur sans ton propre consentement.
+        </blockquote>
+    </div>
+    <div>Vous voulez m'écrire? Merci c'est gentil!
+        Postez votre courrier au :
+        <address>
+            64 rue de nulle part<br>
+            0987654 tombouctou
+
+        </address>
+    </div>
+    <div>Quel développeur web ne connait pas le <abbr title="HyperText Markup Language">HTML</abbr>!?
+        Cela dit, cette technologie a besoin de <abbr title="Cascading Style Sheet">CSS</abbr> pour être
+        efficace.
+    </div>
+    <div>
+        Parmi les techs backend, MongoDB est en 1<sup><small>ère</small></sup> position dans mon top.
+    </div>
+    <div>Chez moi, j'ai un extincteur au CO<sub><small>2</small></sub></div>
+    <div>Salut, fit-il de sa <big>grosse</big> voix!</div>
+    <small>Je me fais tout petit...</small>
+
 
 </body>
+
 </html>
