Mise en place menu

--- a/index.html
+++ b/index.html
@@ -8,25 +8,23 @@
     <meta name="description" content="Cours de maitrise HTML/CSS en vue d'une certification" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="icon" href="./img/favicon.png" />
-    <title>Maitrise HTML/CSS</title>
+    <title>Menu FlexBox</title>
+    <style>
+        
+        
+    </style>
 </head>
 
 <body>
-    <h1>Comprendre les FlexBox</h1>
+    <h1>Menu FlexBox</h1>
     <ul>
-        <li>Un</li>
-        <li>Deux</li>
-        <li>Trois</li>
-        <li>Quatre</li>
-        <li>Cinq</li>
-        <li>Six</li>
-        <!--
-
-        -->
-            <li>Sept</li>
-            <li>Huit</li>
-            <li>Neuf</li>
-            <li>Dix</li>
+        <li>Accueil</li>
+        <li>Manger</li>
+        <li>Cours</li>
+        <li>Recettes</li>
+        <li>Nouvelles</li>
+        <li>A Propos</li>
+        <li>Contact</li>
     </ul>
     <!--
 
