--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
 </head>
 
 <body>
-    <h1>Menu FlexBox</h1>
-    <ul>
-        <li>Accueil</li>
-        <li>Manger</li>
-        <li>Cours</li>
-        <li>Recettes</li>
-        <li>Nouvelles</li>
-        <li>A Propos</li>
-        <li>Contact</li>
-    </ul>
+    <main>
+        <h1>Menu FlexBox</h1>
+        <ul>
+            <li>Accueil</li>
+            <li>Manger</li>
+            <li>Cours</li>
+            <li>Recettes</li>
+            <li>Nouvelles</li>
+            <li>A Propos</li>
+            <li>Contact</li>
+        </ul>
+
+    </main>
     <!--
 
         <h1>De nouvelles bases</h1>
