ajout font-awesome

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cours de maitrise HTML/CSS en vue d'une certification" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <!--icones-->
+    <script src="https://kit.fontawesome.com/347214cdeb.js" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="./img/favicon.png" />
     <title>Menu FlexBox</title>
     <style>
@@ -16,16 +19,24 @@
 </head>
 
 <body>
+    <header>
+
+        <h1><i class="orange fab fa-html5 fa-lg fa-fw" ></i>
+            Menu FlexBox
+            <i class="blue fab fa-css3 fa-fw" ></i>
+            </h1>
+
+    </header>
     <main>
-        <h1>Menu FlexBox</h1>
+        <h2>Menu à un niveau</h2>
         <ul>
-            <li>Accueil</li>
-            <li>Manger</li>
-            <li>Cours</li>
-            <li>Recettes</li>
-            <li>Nouvelles</li>
-            <li>A Propos</li>
-            <li>Contact</li>
+            <li><a href="#" >Accueil</a></li>
+            <li><a href="#" >Manger</a></li>
+            <li><a href="#" >Cours</a></li>
+            <li><a href="#" >Recettes</a></li>
+            <li><a href="#" >Nouvelles</a></li>
+            <li><a href="#" >A Propos</a></li>
+            <li><a href="#" >Contact</a></li>
         </ul>
 
     </main>
